03_newassignment/style.css
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
html,
body {
  height: 100%;
  width: 100%;
  font-family: "Inter", sans-serif;
}
.container {
  height: 100%;
  width: 100%;
  background: radial-gradient(at top left, #8db4be, transparent 60%),
    radial-gradient(at top right, #ecbc91, transparent 50%),
    radial-gradient(at bottom left, #97adaf, transparent 60%),
    radial-gradient(at bottom right, #b4ada4, transparent 60%);
  background-blend-mode: screen;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 230px;

  height: 10%;
  /* background-color: green; */
}

header .logo {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 2px;
}

header .logo h3 {
  font-weight: 500;
}

header .logo h3 span {
  color: white;
}

header .logo img {
  width: 20px;
}

header nav ul {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 20px;
  /* background-color: green; */
}

header nav ul li {
  list-style: none;
  font-size: 14px;
}

header nav ul a {
  text-decoration: none;
  color: #00090c;
}

header .cta {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  border: 1px solid black;
  border-radius: 20px;
  padding: 10px 20px;
  /* background-color: yellow; */
}

header .cta img {
  height: 20px;
}

main {
  /* background-color: red; */
  padding: 0 150px;
  height: 80%;
}

main .stars {
  /* background-color: red; */
  position: absolute;
  top: 30%;
  left: 15%;
}

main .stars img {
  height: 30px;
}

main .wrapper {
  /* background-color: yellow;   */
  height: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
  width: 100%;
  /* height: 600px; */

  /* background-color: red; */
}

main .wrapper h1 {
  width: 43%;
  font-size: 90px;
  line-height: 65px;
  letter-spacing: -2px;
  font-weight: 600;
  color: white;
  text-shadow: 0px 0px 0.1px black;
  position: absolute;
  display: flex;
  flex-wrap: wrap;
  justify-content: start;
  align-items: center;
  gap: 10px;
  top: 35%;
  left: 6%;
  /* background-color: yellow; */
}

.text.behind {
  z-index: 1;
}

.text .behind {
  position: relative;
  z-index: 1;
  color: white;
}

.text .front {
  position: relative;
  z-index: 3;
  color: white;
}

main .wrapper #shirt {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  height: 550px;
  z-index: 2; /* shirt in middle */
}


main .wrapper .collection{
  background-color: #DDD9D6;
  border-radius: 20px;
  margin: 0 auto;
  margin-right: 100px;
  margin-top: 250px;
  /* height: 200px; */
  padding: 20px 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

main .wrapper .collection img{
  height: 100px;
}

main .wrapper .collection h3{
  font-size: 36px;
  font-weight: 500;
  margin: 8px 0;
}

main .wrapper .collection p {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 14px;
  color: #1d2a2e;

}

select {
  background-color: transparent;
  border: none;
  outline: none;
  font-size: 14px;
}
button {
  all: unset;
  cursor: pointer;
}

.achievement {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  /* background-color: red; */
  z-index: 00;
}

.achievement p {
  width: 170px;
  line-break: strict;
  font-size: 14px;
  text-align: center;
  /* background-color: red; */
}

#achievement-one {
  top: 23%;
  left: 30%;
  z-index: 99;
}

#achievement-two {
  top: 30%;
  left: 53%;
  z-index: 99;
}





footer {
  height: 10%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #1d2a2e;
  padding: 0 50px;
}

footer .footer-images {
  /* background-color: red; */
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 5px;
}

footer .footer-images div {
  height: 50px;
  width: 50px;
  background-color: #1d2a2e;

  border-radius: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
}

footer .footer-images div:nth-child(2) {
  border-left: 3px solid #1d2a2e;
  margin-left: -20px;
}
footer .footer-images div:nth-child(3) {
  border-left: 3px solid #1d2a2e;
  margin-left: -20px;
}

footer .footer-images div:last-child p {
  font-size: 45px;
  color: white;
  margin-left: 50px;
}

footer .footer-images img {
  height: 90%;
  width: 90%;
  object-fit: cover;
  object-position: center;
  border-radius: 10px;
}

footer .cta {
  background-color: white;
  color: black;
  padding: 10px 30px;
  border-radius: 8px;
  font-size: 14px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 5px;
}

footer .cta img {
  color: gray;
  height: 20px;
}

